configuring controllers and routing; editing views to match;

--- a/app/views/_header.ejs
+++ b/app/views/_header.ejs
@@ -1,22 +1,9 @@
 <header>
-  <!-- FLASH MESSAGES -->
-  <!--div class="alert alert-warning alert-dismissible" role="alert">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <strong>Warning!</strong> Better check yourself, you're not looking too good.
-  </div-->
-  <%- messages() %>
-
+  <!-- FYI: this is where flash messages will go -->
   <h1><a href="/"><%= title %></a></h1>
-
-  <!--ul>
-    <li><a href="/notes">View all Notes</a></li>
-    <li><a href="/notes/new">Add a new Note</a></li>
-  </ul-->
-
-  <a type="button" class="btn btn-primary pull-right" href="/notes/new">
+  <a type="button" class="btn btn-primary pull-right" href="/robots/new">
     <span class="glyphicon glyphicon-plus"></span> new
   </a>
-
 </header>
 
 <h2><%= page_title %></h2>
