--- a/app/views/robots/index.ejs
+++ b/app/views/robots/index.ejs
@@ -6,7 +6,7 @@
 
     <table class="table table-bordered table-hover table-responsive" style="width:100%">
       <% include table/_header_row %>
-      <% notes.forEach(function(note){ %>
+      <% robots.forEach(function(robot){ %>
         <% include table/_row %>
       <% }); %>
     </table>
