--- a/app/views/robots/_form.ejs
+++ b/app/views/robots/_form.ejs
@@ -1,23 +1,25 @@
-<% if(locals.note){ %>
-  <% var action = '/notes/' + note.id + '/update' %>
-  <% var note_description = note.description %>
-  <% var note_title = note.title %>
+<% if(locals.robot){ %>
+  <% var action = '/robots/' %>
+  <% var method = 'PUT' %>
+  <% var robot_name = robot.name %>
+  <% var robot_description = robot.description %>
 <% } else { %>
-  <% var action = '/notes/new' %>
+  <% var action = '/robots/new' %>
+  <% var method = 'POST' %>
 <% }; %>
 
-<form class="form-horizontal" method="POST" action=<%= action %>>
+<form class="form-horizontal" method="<%= method %>" action="<%= action %>">
   <div class="form-group">
-    <label for="noteTitle" class="col-sm-2 control-label">Title</label>
+    <label for="robotName" class="col-sm-2 control-label">Name</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" name="noteTitle" placeholder="My Note" value="<%= note_title %>">
+      <input type="text" class="form-control" name="robotName" placeholder="My Robot" value="<%= robot_name %>">
     </div>
   </div>
 
   <div class="form-group">
-    <label for="noteDescription" class="col-sm-2 control-label">Description</label>
+    <label for="robotDescription" class="col-sm-2 control-label">Description</label>
     <div class="col-sm-10">
-      <textarea class="form-control" rows="3" name="noteDescription" placeholder="All the things..."><%= note_description %></textarea>
+      <textarea class="form-control" rows="3" name="robotDescription" placeholder="All the things..."><%= robot_description %></textarea>
     </div>
   </div>
 
