--- a/app/views/robots/table/_row.ejs
+++ b/app/views/robots/table/_row.ejs
@@ -1,22 +1,21 @@
-<% note_path = '/notes/'+note._id %>
-<% edit_note_path = '/notes/'+note._id+'/edit' %>
-<% destroy_note_path = '/notes/'+note._id+'/destroy' %>
+<% robot_path = '/robots/'+robot.id %>
+<% edit_robot_path = '/robots/'+robot.id+'/edit' %>
 
 <tr>
-  <td><%= note._id %></td>
-  <td><a href="<%= note_path %>"><%= note.title %></a></td>
-  <td><%= note.description %></td>
-  <td><%= moment(note.created_at).tz(moment.tz.guess(note.created_at)).format('YYYY-MM-DD @ HH:mm:ss zz') %></td>
-  <td><%= moment(note.updated_at).tz(moment.tz.guess(note.updated_at)).format('YYYY-MM-DD @ HH:mm:ss zz') %></td>
+  <td><%= robot.id %></td>
+  <td><a href="<%= robot_path %>"><%= robot.name %></a></td>
+  <td><%= robot.description %></td>
+  <td><%= moment(robot.created_at).tz(moment.tz.guess(robot.created_at)).format('YYYY-MM-DD [at] HH:mm:ss zz') %></td>
+  <td><%= moment(robot.updated_at).tz(moment.tz.guess(robot.updated_at)).format('YYYY-MM-DD [at] HH:mm:ss zz') %></td>
   <td>
-    <form action=<%= edit_note_path %> method='GET'>
+    <form action=<%= edit_robot_path %> method='GET'>
       <button class='btn btn-warning' type='submit'>
         <span class="glyphicon glyphicon-pencil"></span> edit
       </button>
     </form>
   </td>
   <td>
-    <form action=<%= destroy_note_path %> method='POST'>
+    <form action=<%= robot_path %> method='DELETE'>
       <button class='btn btn-danger' type='submit'>
         <span class="glyphicon glyphicon-trash"></span> delete
       </button>
