--- a/app/views/_header.ejs
+++ b/app/views/_header.ejs
@@ -1,5 +1,8 @@
 <header>
-  <!-- FYI: this is where flash messages will go -->
+  <!-- FLASH MESSAGES -->
+  <%- messages() %>
+
+  <!-- SITE TITLE AND NAVIGATION -->
   <h1><a href="/"><%= title %></a></h1>
   <a type="button" class="btn btn-primary pull-right" href="/robots/new">
     <span class="glyphicon glyphicon-plus"></span> new
