--- a/app/views/robots/table/_row.ejs
+++ b/app/views/robots/table/_row.ejs
@@ -1,5 +1,6 @@
 <% robot_path = '/robots/'+robot.id %>
 <% edit_robot_path = '/robots/'+robot.id+'/edit' %>
+<% destroy_robot_path = '/robots/'+robot.id+'/destroy' %>
 
 <tr>
   <td><%= robot.id %></td>
@@ -8,14 +9,14 @@
   <td><%= moment(robot.created_at).tz(moment.tz.guess(robot.created_at)).format('YYYY-MM-DD [at] HH:mm:ss zz') %></td>
   <td><%= moment(robot.updated_at).tz(moment.tz.guess(robot.updated_at)).format('YYYY-MM-DD [at] HH:mm:ss zz') %></td>
   <td>
-    <form action=<%= edit_robot_path %> method='GET'>
+    <form action="<%= edit_robot_path %>" method='GET'>
       <button class='btn btn-warning' type='submit'>
         <span class="glyphicon glyphicon-pencil"></span> edit
       </button>
     </form>
   </td>
   <td>
-    <form action=<%= robot_path %> method='DELETE'>
+    <form action="<%= destroy_robot_path %>" method='POST'>
       <button class='btn btn-danger' type='submit'>
         <span class="glyphicon glyphicon-trash"></span> delete
       </button>
