--- a/app/views/_footer.ejs
+++ b/app/views/_footer.ejs
@@ -4,3 +4,12 @@
     <a href="https://github.com/s2t2/express-sticky-notes/">source</a>
   </p>
 </footer>
+
+<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<script type="text/javascript">
+
+    console.log("bootstrap flash")
+    $().alert('close') // closes data-dismiss="alert" http://getbootstrap.com/javascript/#alerts-methods
+
+</script>
