--- a/app/views/_bootstrap_flash_messages.ejs
+++ b/app/views/_bootstrap_flash_messages.ejs
@@ -1,33 +1,10 @@
 <% if(messages){ %>
   <% Object.keys(messages).forEach(function (type) { %>
-    <ul class="<%= type %>">
     <% messages[type].forEach(function (message) { %>
-      <li><%= message %></li>
+      <div class="alert alert-<%= type %> alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <%= message %>
+      </div>
     <% }) %>
-    </ul>
   <% }) %>
-  </div>
 <% } %>
-
-
-
-
-<div class="alert alert-warning alert-dismissible" role="alert">
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <strong>YELLOW!</strong> Better check yourself, you're not looking too good.
-</div>
-
-<div class="alert alert-info alert-dismissible" role="alert">
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <strong>BLUE!</strong> Better check yourself, you're not looking too good.
-</div>
-
-<div class="alert alert-success alert-dismissible" role="alert">
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <strong>Green!</strong> Better check yourself, you're not looking too good.
-</div>
-
-<div class="alert alert-danger alert-dismissible" role="alert">
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <strong>Red!</strong> Better check yourself, you're not looking too good.
-</div>
