--- a/app/views/_footer.ejs
+++ b/app/views/_footer.ejs
@@ -1,7 +1,7 @@
 <hr style="margin-top:2em;">
 <footer>
   <p>
-    <a href="https://github.com/s2t2/express-sticky-notes/">source</a>
+    <a href="#">source</a>
   </p>
 </footer>
 
