--- a/app/views/_header.ejs
+++ b/app/views/_header.ejs
@@ -1,6 +1,8 @@
 <header>
   <!-- FLASH MESSAGES -->
-  <%- messages('_bootstrap_flash_messages') %>
+  <%#- messages('_bootstrap_flash_messages') %>
+  <%- messages() %>
+
 
   <!-- SITE TITLE AND NAVIGATION -->
   <h1><a href="/"><%= title %></a></h1>
